# desktop-app

./: .eslintrc.json  .lintstagedrc  index.html  package.json  package.yaml  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflow/: release.yml
.github/workflows/: pull-request.yml  release.yml
.husky/: pre-push
src/: App.svelte  main.ts  stores.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Button.svelte  TopRow.svelte
tests/: pass.test.ts
