[package]
name = "desktop-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.4.0"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.27.0", features = ["full"] }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
uuid = { version = "1.3.0", features = ["serde", "v7"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
